02-internet-gateway.tf
resource "aws_internet_gateway" "demo" {
  vpc_id = aws_vpc.demo.id
  tags = {
    Name = var.ig
  }
}
